added italian translation from Marco Ciampa
 SVN 5598@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -29,9 +29,11 @@ components/codetools/keywordfunclists.pas svneol=native#text/pascal
 components/codetools/languages/codetools.ca.po svneol=native#text/plain
 components/codetools/languages/codetools.de.po svneol=native#text/plain
 components/codetools/languages/codetools.es.po svneol=native#text/plain
+components/codetools/languages/codetools.esutf.po svneol=native#text/plain
 components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
+components/codetools/languages/codetools.itiso.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.pliso.po svneol=native#text/plain
 components/codetools/languages/codetools.plwin.po svneol=native#text/plain
@@ -141,7 +143,10 @@ components/synedit/design/tsynunixshellscriptsyn.xpm -text svneol=native#image/x
 components/synedit/design/tsynxmlsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
+components/synedit/languages/synedit.fi.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
+components/synedit/languages/synedit.it.po svneol=native#text/plain
+components/synedit/languages/synedit.itiso.po svneol=native#text/plain
 components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.pliso.po svneol=native#text/plain
 components/synedit/languages/synedit.plwin.po svneol=native#text/plain
@@ -151,6 +156,8 @@ components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.it.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.itiso.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
@@ -871,10 +878,12 @@ install/debian/install.sh -text svneol=native#application/x-sh
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
+languages/lazaruside.esutf.po svneol=native#text/plain
 languages/lazaruside.fi.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
+languages/lazaruside.itiso.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
@@ -884,9 +893,11 @@ languages/lazaruside.ruwin.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
+languages/objinspstrconsts.esutf.po svneol=native#text/plain
 languages/objinspstrconsts.fi.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
+languages/objinspstrconsts.itiso.po svneol=native#text/plain
 languages/objinspstrconsts.pl.po svneol=native#text/plain
 languages/objinspstrconsts.pliso.po svneol=native#text/plain
 languages/objinspstrconsts.plwin.po svneol=native#text/plain
@@ -1291,6 +1302,7 @@ lcl/languages/lcl.esutf.po svneol=native#text/plain
 lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
+lcl/languages/lcl.itiso.po svneol=native#text/plain
 lcl/languages/lcl.pl.po svneol=native#text/plain
 lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
@@ -1382,6 +1394,8 @@ tools/apiwizz/apiwizz.pp svneol=native#text/pascal
 tools/check_ide_libs.sh -text svneol=native#application/x-sh
 tools/copy_po_files_to_lazarus_sources.sh -text svneol=native#application/x-sh
 tools/cvs2cl.pl -text svneol=native#application/x-perl
+tools/getallmofiles.sh -text svneol=native#application/x-sh
+tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/build_fpcsrc_rpm.sh -text svneol=native#application/x-sh
 tools/install/create_fpc_deb.sh -text svneol=native#application/x-sh
