started HelpIntf - the IDE interface for the help system
 SVN 5638@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -485,6 +485,7 @@ ide/frmsearch.lrs svneol=native#text/pascal
 ide/frmsearch.pas svneol=native#text/pascal
 ide/global.inc svneol=native#text/pascal
 ide/global.pp svneol=native#text/pascal
+ide/helpmanager.pas svneol=native#text/pascal
 ide/idedefs.pas svneol=native#text/pascal
 ide/ideoptiondefs.pas svneol=native#text/pascal
 ide/ideprocs.pp svneol=native#text/pascal
@@ -566,6 +567,7 @@ ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
+ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
 ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/listviewpropedit.pp svneol=native#text/pascal
