--- a/.gitattributes
+++ b/.gitattributes
@@ -452,6 +452,9 @@ ide/codetoolsoptions.pas svneol=native#text/pascal
 ide/compiler.pp svneol=native#text/pascal
 ide/compileroptions.pp svneol=native#text/pascal
 ide/componentpalette.pas svneol=native#text/pascal
+ide/condef.lfm svneol=native#text/plain
+ide/condef.lrs svneol=native#text/pascal
+ide/condef.pas svneol=native#text/pascal
 ide/customformeditor.pp svneol=native#text/pascal
 ide/debugmanager.pas svneol=native#text/pascal
 ide/debugoptionsfrm.lfm svneol=native#text/plain
