--- a/.gitattributes
+++ b/.gitattributes
@@ -881,6 +881,7 @@ images/unitdependencies/srctype_unknown_22x22.xpm -text svneol=native#image/x-xp
 images/uparrow.ico -text svneol=unset#image/x-icon
 images/uparrow.xpm -text svneol=native#image/x-xpixmap
 install/debian/install.sh -text svneol=native#application/x-sh
+languages/lazaruside.ar.po svneol=native#text/plain
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
