--- a/components/codetools/Makefile.fpc
+++ b/components/codetools/Makefile.fpc
@@ -22,8 +22,9 @@ implicitunits=codetoolsstrconsts avl_tree basiccodetools codecache sourcelog \
    identcompletiontool stdcodetools resourcecodetool codetemplatestool \
    methodjumptool eventcodetool codecompletiontool codeatom codetree \
    definetemplates expreval keywordfunclists linkscanner sourcechanger \
-   fileprocs codetoolsstructs \
-   codetoolmanager memcheck
+   fileprocs codetoolsstructs codetoolmanager \
+   memcheck \
+   laz_dom laz_xmlcfg laz_xmlread laz_xmlwrite
 
 [clean]
 files=$(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT))
