+ Added a new listview test example
 SVN 5668@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -383,6 +383,10 @@ examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
 examples/lazintfimage/mainunit1.lrs svneol=native#text/pascal
 examples/lazintfimage/mainunit1.pas svneol=native#text/pascal
 examples/listboxtest.pp svneol=native#text/pascal
+examples/listview/listview.lpr svneol=native#text/pascal
+examples/listview/testform.lfm svneol=native#text/plain
+examples/listview/testform.lrs svneol=native#text/pascal
+examples/listview/testform.pp svneol=native#text/pascal
 examples/listviewtest.pp svneol=native#text/pascal
 examples/memotest.pp svneol=native#text/pascal
 examples/messagedialogs.pp svneol=native#text/pascal
