added texttolols.pas and published TBitBtn.Caption
 SVN 5685@trunk

--- a/ideintf/Makefile.fpc
+++ b/ideintf/Makefile.fpc
@@ -25,7 +25,10 @@ implicitunits=actionseditor \
   listviewpropedit \
   objectinspector \
   objinspstrconsts \
-  propedits
+  propedits \
+  helpintf \
+  texttools \
+  actionseditor
 
 [clean]
 files=$(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT)) \
