--- a/.gitattributes
+++ b/.gitattributes
@@ -584,6 +584,7 @@ ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
+ideintf/texttools.pas svneol=native#text/pascal
 images/bookmark.lrs svneol=native#text/pascal
 images/btn_downarrow.ico -text svneol=unset#image/x-icon
 images/btn_downarrow.xpm -text svneol=native#image/x-xpixmap
