added RTTI controls
 SVN 5687@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -112,6 +112,38 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/baseicon.png -text svneol=unset#image/png
+components/rtticontrols/examples/example1.lfm svneol=native#text/plain
+components/rtticontrols/examples/example1.lrs svneol=native#text/pascal
+components/rtticontrols/examples/example1.pas svneol=native#text/pascal
+components/rtticontrols/examples/example2.lfm svneol=native#text/plain
+components/rtticontrols/examples/example2.lrs svneol=native#text/pascal
+components/rtticontrols/examples/example2.pas svneol=native#text/pascal
+components/rtticontrols/examples/exampleproject1.lpi svneol=native#text/plain
+components/rtticontrols/examples/exampleproject1.lpr svneol=native#text/pascal
+components/rtticontrols/examples/exampleproject2.lpi svneol=native#text/plain
+components/rtticontrols/examples/exampleproject2.lpr svneol=native#text/pascal
+components/rtticontrols/rttictrls.lrs svneol=native#text/pascal
+components/rtticontrols/rttictrls.pas svneol=native#text/pascal
+components/rtticontrols/runtimetypeinfocontrols.lpk svneol=native#text/pascal
+components/rtticontrols/runtimetypeinfocontrols.pas svneol=native#text/pascal
+components/rtticontrols/ttibutton.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/tticalendar.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/tticheckbox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/tticheckgroup.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttichecklistbox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/tticombobox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttiedit.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttigroupbox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttiimage.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttilabel.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttilistbox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttimaskedit.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttimemo.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttipropertygrid.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttiradiogroup.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttispinedit.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttitrackbar.xpm -text svneol=native#image/x-xpixmap
 components/sdf/registersdf.lrs svneol=native#text/pascal
 components/sdf/registersdf.pas svneol=native#text/pascal
 components/sdf/sdflaz.lpk svneol=native#text/pascal
