fixed compilation 1.0.10, started change class editor
 SVN 5696@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -295,6 +295,9 @@ designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
 designer/abstractformeditor.pp svneol=native#text/pascal
 designer/aligncompsdlg.pp svneol=native#text/pascal
+designer/changeclassdialog.lfm svneol=native#text/plain
+designer/changeclassdialog.lrs svneol=native#text/pascal
+designer/changeclassdialog.pas svneol=native#text/pascal
 designer/controlselection.pp svneol=native#text/pascal
 designer/customeditor.pp svneol=native#text/pascal
 designer/designer.pp svneol=native#text/pascal
