started propertystorage enable with -dEnableSessionProps
 SVN 5699@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1146,6 +1146,7 @@ lcl/include/treeview.inc svneol=native#text/pascal
 lcl/include/winapi.inc svneol=native#text/pascal
 lcl/include/winapih.inc svneol=native#text/pascal
 lcl/include/wincontrol.inc svneol=native#text/pascal
+lcl/inipropstorage.pas svneol=native#text/pascal
 lcl/interfacebase.pp svneol=native#text/pascal
 lcl/interfaces/gnome/gnomeint.pp svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintf.inc svneol=native#text/pascal
@@ -1374,6 +1375,7 @@ lcl/nonwin32/messages.pp svneol=native#text/pascal
 lcl/pairsplitter.pas svneol=native#text/pascal
 lcl/postscriptprinter.pas svneol=native#text/pascal
 lcl/printers.pas svneol=native#text/pascal
+lcl/propertystorage.pas svneol=native#text/pascal
 lcl/spin.pp svneol=native#text/pascal
 lcl/stdactns.pas svneol=native#text/pascal
 lcl/stdctrls.pp svneol=native#text/pascal
@@ -1411,6 +1413,7 @@ lcl/widgetset/wsproc.pp svneol=native#text/pascal
 lcl/widgetset/wsspin.pp svneol=native#text/pascal
 lcl/widgetset/wsstdctrls.pp svneol=native#text/pascal
 lcl/widgetset/wstoolwin.pp svneol=native#text/pascal
+lcl/xmlpropstorage.pas svneol=native#text/pascal
 /localize.sh -text svneol=native#application/x-sh
 packager/addfiletoapackagedlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.pas svneol=native#text/pascal
