--- a/.gitattributes
+++ b/.gitattributes
@@ -1012,6 +1012,7 @@ lcl/imglist.pp svneol=native#text/pascal
 lcl/include/actionlink.inc svneol=native#text/pascal
 lcl/include/alignment.inc svneol=native#text/pascal
 lcl/include/application.inc svneol=native#text/pascal
+lcl/include/applicationproperties.inc svneol=native#text/pascal
 lcl/include/basedragcontrolobject.inc svneol=native#text/pascal
 lcl/include/bevel.inc svneol=native#text/pascal
 lcl/include/bitbtn.inc svneol=native#text/pascal
