added rx components  from Michal Van Canneyt
 SVN 5709@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -144,6 +144,17 @@ components/rtticontrols/ttipropertygrid.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttiradiogroup.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttispinedit.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttitrackbar.xpm -text svneol=native#image/x-xpixmap
+components/rx/apputils.pp svneol=native#text/pascal
+components/rx/lib/README.txt svneol=native#text/plain
+components/rx/mrulist.lrs svneol=native#text/pascal
+components/rx/mrulist.pp svneol=native#text/pascal
+components/rx/placement.pp svneol=native#text/pascal
+components/rx/rx.lpk svneol=native#text/pascal
+components/rx/rx.pas svneol=native#text/pascal
+components/rx/strholder.lrs svneol=native#text/pascal
+components/rx/strholder.pp svneol=native#text/pascal
+components/rx/tmrumanager.xpm -text svneol=native#image/x-xpixmap
+components/rx/tstrholder.xpm -text svneol=native#image/x-xpixmap
 components/sdf/registersdf.lrs svneol=native#text/pascal
 components/sdf/registersdf.pas svneol=native#text/pascal
 components/sdf/sdflaz.lpk svneol=native#text/pascal
@@ -727,6 +738,7 @@ images/components/tidletimer.xpm -text svneol=native#image/x-xpixmap
 images/components/timage.ico -text svneol=unset#image/x-icon
 images/components/timage.xpm -text svneol=native#image/x-xpixmap
 images/components/timagelist.xpm -text svneol=native#image/x-xpixmap
+images/components/tinipropstorage.xpm -text svneol=native#image/x-xpixmap
 images/components/tlabel.ico -text svneol=unset#image/x-icon
 images/components/tlabel.xpm -text svneol=native#image/x-xpixmap
 images/components/tlabelededit.xpm -text svneol=native#image/x-xpixmap
@@ -799,6 +811,7 @@ images/components/ttrackbar.ico -text svneol=unset#image/x-icon
 images/components/ttrackbar.xpm -text svneol=native#image/x-xpixmap
 images/components/ttreeview.xpm -text svneol=native#image/x-xpixmap
 images/components/tupdown.xpm -text svneol=native#image/x-xpixmap
+images/components/txmlpropstorage.xpm -text svneol=native#image/x-xpixmap
 images/components/unregisteredcomponent.xpm -text svneol=native#image/x-xpixmap
 images/components_images.lrs svneol=native#text/pascal
 images/downarrow.ico -text svneol=unset#image/x-icon
