--- a/lcl/Makefile.fpc
+++ b/lcl/Makefile.fpc
@@ -34,18 +34,19 @@ implicitunits= \
   extendedstrings \
   extgraphics \
   filectrl \
-  fpcadds \
   forms \
+  fpcadds \
   graphics \
   graphmath \
   graphtype \
   grids \
   imglist \
+  inipropstorage \
   interfacebase \
   lazlinkedlist \
   lclintf \
-  lclproc \
   lclmemmanager \
+  lclproc \
   lclstrconsts \
   lcltype \
   lmessages \
@@ -55,6 +56,7 @@ implicitunits= \
   pairsplitter \
   postscriptprinter \
   printers \
+  propertystorage \
   spin \
   stdactns \
   stdctrls \
@@ -62,6 +64,7 @@ implicitunits= \
   textstrings \
   toolwin \
   utrace \
+  xmlpropstorage \
   vclglobals
 
 rsts=lclstrconsts
