moved designer/abstractformeditor.pp to ideintf/formeditingintf.pas
 SVN 5744@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -304,7 +304,6 @@ debugger/watchpropertydlg.pp svneol=native#text/pascal
 designer/abstractcompiler.pp svneol=native#text/pascal
 designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
-designer/abstractformeditor.pp svneol=native#text/pascal
 designer/aligncompsdlg.pp svneol=native#text/pascal
 designer/changeclassdialog.lfm svneol=native#text/plain
 designer/changeclassdialog.lrs svneol=native#text/pascal
@@ -622,6 +621,7 @@ ideintf/allideintf.pas svneol=native#text/pascal
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
+ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
