splitted TMainIDE (main control instance) and TMainIDEBar (IDE menu and palette), added mainbase.pas and mainintf.pas
 SVN 5749@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -570,6 +570,8 @@ ide/lazconf.pp svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
 ide/main.pp svneol=native#text/pascal
 ide/mainbar.pas svneol=native#text/pascal
+ide/mainbase.pas svneol=native#text/pascal
+ide/mainintf.pas svneol=native#text/pascal
 ide/makeresstrdlg.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
 ide/msgview.pp svneol=native#text/pascal
@@ -630,6 +632,7 @@ ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
+ideintf/srceditorintf.pas svneol=native#text/pascal
 ideintf/texttools.pas svneol=native#text/pascal
 images/bookmark.lrs svneol=native#text/pascal
 images/btn_downarrow.ico -text svneol=unset#image/x-icon
