moved componentreg.pas to ideintf
 SVN 5753@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -622,6 +622,7 @@ ideintf/actionseditor.pas svneol=native#text/pascal
 ideintf/allideintf.pas svneol=native#text/pascal
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
+ideintf/componentreg.pas svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
@@ -1437,7 +1438,6 @@ packager/addfiletoapackagedlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
-packager/componentreg.pas svneol=native#text/pascal
 packager/openinstalledpkgdlg.pas svneol=native#text/pascal
 packager/packagedefs.pas svneol=native#text/pascal
 packager/packageeditor.pas svneol=native#text/pascal
