--- a/.gitattributes
+++ b/.gitattributes
@@ -632,6 +632,7 @@ ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
+ideintf/packageintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
 ideintf/texttools.pas svneol=native#text/pascal
