moved intfstrconsts.pp to lclstrconsts.pas, implemented TPenHandleCache
 SVN 5769@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1366,7 +1366,6 @@ lcl/interfaces/win32/win32wsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wstoolwin.pp svneol=native#text/pascal
 lcl/interfaces/win32/winext.pas svneol=native#text/pascal
 lcl/intfgraphics.pas svneol=native#text/pascal
-lcl/intfstrconsts.pas svneol=native#text/pascal
 lcl/languages/lcl.ca.po svneol=native#text/plain
 lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
@@ -1387,6 +1386,7 @@ lcl/lclicons.lrs svneol=native#text/pascal
 lcl/lclintf.pas svneol=native#text/pascal
 lcl/lclmemmanager.pas svneol=native#text/pascal
 lcl/lclproc.pas svneol=native#text/pascal
+lcl/lclrescache.pas svneol=native#text/pascal
 lcl/lclstrconsts.pas svneol=native#text/pascal
 lcl/lcltype.pp svneol=native#text/pascal
 lcl/lmessages.pp svneol=native#text/pascal
