fixed initialization of GTKAPIWidget_new
 SVN 5782@trunk

--- a/ideintf/Makefile.fpc
+++ b/ideintf/Makefile.fpc
@@ -29,6 +29,7 @@ implicitunits=actionseditor \
   objinspstrconsts \
   propedits \
   helpintf \
+  helphtml \
   texttools \
   actionseditor \
   formeditingintf \
