--- a/.gitattributes
+++ b/.gitattributes
@@ -434,6 +434,7 @@ examples/listview/testform.lfm svneol=native#text/plain
 examples/listview/testform.lrs svneol=native#text/pascal
 examples/listview/testform.pp svneol=native#text/pascal
 examples/listviewtest.pp svneol=native#text/pascal
+examples/loadpicture.pas svneol=native#text/pascal
 examples/memotest.pp svneol=native#text/pascal
 examples/messagedialogs.pp svneol=native#text/pascal
 examples/notebk.pp svneol=native#text/pascal
