implemented platform independent binary object streamer
 SVN 5787@trunk

--- a/lcl/Makefile.fpc
+++ b/lcl/Makefile.fpc
@@ -48,7 +48,7 @@ implicitunits= \
   lclintf \
   lclmemmanager \
   lclproc \
-  lclreschache \
+  lclrescache \
   lclstrconsts \
   lcltype \
   lmessages \
