added codeexplorer icons
 SVN 5809@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -666,6 +666,19 @@ images/btn_viewforms.ico -text svneol=unset#image/x-icon
 images/btn_viewforms.xpm -text svneol=native#image/x-xpixmap
 images/btn_viewunits.ico -text svneol=unset#image/x-icon
 images/btn_viewunits.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_class.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_const.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_default.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_finalization.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_implementation.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_initialization.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_interface.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_procedure.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_program.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_property.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_type.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_unit.xpm -text svneol=native#image/x-xpixmap
+images/codeexplorer/ce_variable.xpm -text svneol=native#image/x-xpixmap
 images/codetoolsdefines/block_22x22.xpm -text svneol=native#image/x-xpixmap
 images/codetoolsdefines/ctdefinestate_auto_22x22.xpm -text svneol=native#image/x-xpixmap
 images/codetoolsdefines/ctdefinestate_autoproj_22x22.xpm -text svneol=native#image/x-xpixmap
