--- a/.gitattributes
+++ b/.gitattributes
@@ -397,6 +397,17 @@ docs/xml/lcl/toolwin.xml svneol=native#text/xml
 docs/xml/lcl/utrace.xml svneol=native#text/xml
 docs/xml/lcl/vclglobals.xml svneol=native#text/xml
 docs/xml/make_all_skel.sh -text svneol=native#application/x-sh
+examples/address_book/addrbook.dpr svneol=native#text/pascal
+examples/address_book/addrbook.lpi svneol=native#text/plain
+examples/address_book/addrbook.lpr svneol=native#text/pascal
+examples/address_book/addrbook.res svneol=native#unset
+examples/address_book/frmmain.lfm svneol=native#text/plain
+examples/address_book/frmmain.lrs svneol=native#text/pascal
+examples/address_book/frmmain.pas svneol=native#text/pascal
+examples/address_book/mybook.dbf svneol=native#unset
+examples/address_book/mybook.mdx svneol=native#unset
+examples/address_book/mybook2.dbf svneol=native#unset
+examples/address_book/mybook2.mdx svneol=native#unset
 examples/bitbtnform.pp svneol=native#text/pascal
 examples/bitbutton.pp svneol=native#text/pascal
 examples/checkbox.pp svneol=native#text/pascal
@@ -423,6 +434,16 @@ examples/gtkglarea/gtkglarea_demo.lpi svneol=native#text/plain
 examples/gtkglarea/gtkglarea_demo.pp svneol=native#text/pascal
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
+examples/imgviewer/file.bmp -text svneol=native#image/bmp
+examples/imgviewer/file.xpm -text svneol=native#image/x-xpixmap
+examples/imgviewer/frmmain.lfm svneol=native#text/plain
+examples/imgviewer/frmmain.lrs svneol=native#text/pascal
+examples/imgviewer/frmmain.pas svneol=native#text/pascal
+examples/imgviewer/images.bmp -text svneol=native#image/bmp
+examples/imgviewer/imgview.dpr svneol=native#text/pascal
+examples/imgviewer/imgview.lpi svneol=native#text/plain
+examples/imgviewer/imgview.lpr svneol=native#text/pascal
+examples/imgviewer/imgview.res svneol=native#unset
 examples/lazintfimage/fadein1.lpi svneol=native#text/plain
 examples/lazintfimage/fadein1.lpr svneol=native#text/pascal
 examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
