removed obsolete unit vclglobals
 SVN 5814@trunk

--- a/lcl/Makefile.fpc
+++ b/lcl/Makefile.fpc
@@ -66,8 +66,7 @@ implicitunits= \
   textstrings \
   toolwin \
   utrace \
-  xmlpropstorage \
-  vclglobals
+  xmlpropstorage
 
 rsts=lclstrconsts
 
