added darwin libpaths to Makefile and LCL Usage lib paths
 SVN 5826@trunk

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -52,6 +52,10 @@ override COMPILER_UNITDIR+=lcl/nonwin32
 endif
 endif
 export LCL_PLATFORM
+# LibPaths
+ifeq ($(OS_TARGET),darwin)
+LAZARUS_LIBPATHS=-Fl/usr/X11R6/lib -Fl/sw/lib
+endif
 # user config
 ifndef LAZARUS_CONFIG_DIR
 ifeq ($(OS_TARGET),win32)
@@ -63,6 +67,7 @@ endif
 export LAZARUS_CONFIG_DIR
 # idemake.cfg
 LAZARUS_IDE_CONFIG=$(LAZARUS_CONFIG_DIR)/idemake.cfg
+LAZARUS_OPT=$(LAZARUS_LIBPATHS)
 
 [rules]
 .PHONY: lcl components packager/registration ideintf packager ide idepkg tools all clean cleanide purge
@@ -75,10 +80,14 @@ ide:
 ifeq ($(OS_TARGET), win32)
         $(MAKE) lazarus.res
 endif
+ifeq ($(LAZARUS_OPT),)
         $(MAKE) --assume-new=lazarus.pp lazarus$(EXEEXT)
+else
+        $(MAKE) --assume-new=lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(LAZARUS_OPT)'
+endif
 
 idepkg:
-        $(MAKE) --assume-new=lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) @$(LAZARUS_IDE_CONFIG)'
+        $(MAKE) --assume-new=lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(LAZARUS_OPT) @$(LAZARUS_IDE_CONFIG)'
 
 tools: lcl components
         $(MAKE) -C tools
