--- a/.gitattributes
+++ b/.gitattributes
@@ -1518,6 +1518,7 @@ tools/install/create_lazarus_tgz_from_local_dir.sh -text svneol=native#applicati
 tools/install/do_nothing.sh -text svneol=native#application/x-sh
 tools/install/download_and_build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/file_filter.sh -text svneol=native#application/x-sh
+tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/smart_strip.sh -text svneol=native#application/x-sh
